# OmniStatic

./: .gitignore  CMakeLists.txt  README.md  build.sh  dep.sh
include/: banner.hpp  colors.hpp  exeAnalysis.hpp  exeTools.hpp  menu.hpp  pdfAnalysis.hpp  pdfTools.hpp  utils.hpp
src/: banner.cpp  compile.sh  exeAnalysis.cpp  exeTools.cpp  main  main.cpp  menu.cpp  pdfAnalysis.cpp  pdfTools.cpp  utils.cpp
